<resources>
    <string name="app_name">MedApp</string>
    <string name="time_line">Timeline</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="weight">Weight</string>
    <string name="medicines">Medicines</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="settings">Settings</string>
    <string name="measurements">Measurements</string>
    <string name="mediciton_name">Medicine Name</string>
    <string name="reminder_times">Reminder Times</string>
    <string name="search_here">Search Here</string>
    <string name="pick_a_time">Pick date/time</string>
    <string name="enter">enter</string>
    <string name="dose">Dose</string>
    <string name="every_day">Every Day</string>
    <string name="spacific_days">Specific Days</string>
    <string name="add">Add</string>
    <string name="morning">Morning</string>
    <string name="afterNoon">AfterNoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="choose_measure">Choose Measure</string>
    <string name="enter_measure">Enter Measure</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="fats">Fats</string>
    <string name="schedule">Schedule</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_age">Enter Age</string>
    <string name="err_enter_measure_type">Please Choose Measure Type</string>
    <string name="err_enter_auth">Authentication failed.</string>
    <string name="enter_day">Please Select Day</string>
    <string name="add_msg_drug">Drug Added Successfully </string>
    <string name="add_drug_err">Failed To Add New Drug </string>
    <string name="add_meas_msg">Measure Added Successfully</string>
    <string name="add_meas_err">Failed To Add New Measure</string>
    <string name="fab_med">Add New Medicine</string>
    <string name="fab_meas">Add New Measure</string>


    <string-array name="reminder_array">
        <item>Once a day</item>
        <item>Every 6 hours</item>
        <item>Every 8 hours</item>
        <item>Every 12 hours</item>

    </string-array>


    <string-array name="weekday">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <string-array name="weekdayen">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_now">Login Now !</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
